[tool.poetry]
name = "ml6-clustering-sensor-data"
version = "0.1.0"
description = ""
authors = ["Siqi Li <lisiqi9347@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ydata-profiling = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
